# cloud-cost-cutter

./: .dockerignore  .env.example  .gitignore  .openenv-upload-ignore  .replit  Dockerfile  README.md  __init__.py  client.py  inference.py  inference_llm.py  inference_rl.py  models.py  openenv.yaml  pyproject.toml  replit.md
.github/workflows/: deploy.yml
attached_assets/: Pasted-Now-I-have-everything-Let-me-give-you-a-curated-structu_1776171936066.txt
cloud_cost_env/: __init__.py  baseline_runner.py  client.py  inference.py  inference_llm.py  inference_rl.py  models.py
cloud_cost_env/data/: generator.py  instance_catalog.json
cloud_cost_env/data/rl/: q_policy_v1.json
cloud_cost_env/data/tasks/: cleanup.json  full_optimization.json  rightsize.json
cloud_cost_env/rl/: __init__.py  evaluate.py  evaluate_baseline.py  evaluate_heuristic.py  policy.py  quality_gate.py  train.py
cloud_cost_env/server/: Dockerfile  action_engine.py  app.py  azure_live.py  dependency_checker.py  environment.py  grader.py  recommendation_engine.py  requirements.txt  sla_checker.py  web_tester.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  UseCaseCharts.jsx  styles.css
frontend/src/components/: shared.jsx
frontend/src/routes/: RLStatusPage.jsx  UseCaseRoutePage.jsx
scripts/: setup_azure_identity_railway.ps1  smoke_local_graphic_azure.py  validate-submission.sh
server/: app.py
